# cp

./: .clangd  .gitignore  CMakeLists.txt  README.md
problems/codeforces/1462B_Favorite_Sequence/: main.cpp  notes.md
problems/codeforces/1520A_Do_Not_Be_Distracted/: main.cpp  notes.md
problems/codeforces/1669B_Triple/: main.cpp  notes.md
problems/codeforces/1703B_ICBC_Balloons/: main.cpp
problems/codeforces/1703C_Cypher/: main.cpp
problems/codeforces/1722A_Spell_Check/: main.cpp
problems/codeforces/1741C_Minimize_the_Thickness/: main.cpp  notes.md
problems/codeforces/1742C_Stripes/: main.cpp  notes.md
problems/codeforces/1760B_Atilla_s_Favorite_Problem/: main.cpp  notes.md
scripts/: debug_cf.sh
templates/: main.cpp
